metabase/metabase.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metabase
  name: metabase
  namespace: metabase
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: metabase
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
spec:
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: metabase-data
              mountPath: /metabase-data
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
      volumes:
        - name: metabase-data
          persistentVolumeClaim:
            claimName: metabase-pvc
