metabase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: metabase-ingress
  name: metabase
  namespace: metabase
spec:
  rules:
    - host: metabase.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: metabase
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - metabase.int.kyledev.co
      secretName: metabase-kyledev-tls-prod
